Move toggles column down to avoid label overlap

--- a/public/style.css
+++ b/public/style.css
@@ -81,6 +81,7 @@ strong {
     align-items: center;
     justify-content: space-around;
     width: 60px;
+    padding-top: 30px; /* Move column down to avoid label overlap */
     padding-bottom: 20px;
 }
 
